--- a/ordia/app/templates/lexical_category.html
+++ b/ordia/app/templates/lexical_category.html
@@ -11,7 +11,7 @@ SELECT
   ?lexeme ?lexemeLabel
   ?language ?languageLabel
 WHERE {
-	?lexeme wikibase:lexicalCategory wd:{{ q }} .
+  ?lexeme wikibase:lexicalCategory wd:{{ q }} .
   ?lexeme wikibase:lemma ?lexemeLabel .
   ?lexeme dct:language ?language .
   OPTIONAL {
@@ -19,13 +19,41 @@ WHERE {
     FILTER (LANG(?languageLabel) = 'en')
   }
 }
+LIMIT 10000
 `
+
+  languagesSparql = `
+# Count of number of lexemes used for a specified lexical category
+# wrt. language
+SELECT
+  ?count
+  ?language ?languageLabel
+  ?zoom ?zoomUrl
+  ?languageDescription
+{
+  {
+    SELECT (COUNT(*) AS ?count) ?language {
+      wd:{{ q }} ^wikibase:lexicalCategory / dct:language ?language .
+    }
+    GROUP BY ?language
+  }
+  BIND("→" AS ?zoom)
+  BIND(CONCAT("../lexical-category/{{ q }}/language/", SUBSTR(STR(?language), 32)) AS ?zoomUrl)
+  SERVICE wikibase:label { bd:serviceParam wikibase:language "[AUTO_LANGUAGE],en". }
+}
+ORDER BY DESC(?count)
+`
+
 
 
  $(document).ready(function() {
      sparqlToDataTable(lexemesSparql, "#lexemes", {
 	 linkPrefixes: {
 	     lexeme: '../',
+	     language: '../language/',
+	 }});
+     sparqlToDataTable(languagesSparql, "#languages", {
+	 linkPrefixes: {
 	     language: '../language/',
 	 }});
  });
@@ -41,14 +69,18 @@ WHERE {
 
 <h1>Lexical category: {{ q }}</h1>
 
+  <a title="Back"
+     role="button"
+     class="btn btn-outline-dark btn-sm"
+     href="./">←</a>
   <a title="View and edit item for lexical cateogry on Wikidata"
      role="button"
      class="btn btn-outline-dark btn-sm"
-     href="https://www.wikidata.org/wiki/{{ q }}">Wikidata</a>
+     href="https://www.wikidata.org/wiki/{{ q }}">Wikidata 🔗</a>
   <a title="View item for lexical category in Sholia"
      role="button"
      class="btn btn-outline-dark btn-sm"
-     href="https://tools.wmflabs.org/scholia/topic/{{ q }}">Scholia</a>
+     href="https://tools.wmflabs.org/scholia/topic/{{ q }}">Scholia 🔗</a>
 
 <hr/>
 
@@ -56,15 +88,11 @@ WHERE {
 
 <table class="table table-hover" id="lexemes"></table>
 
-<div class="language-count-bubble-chart">
 
-  <h2>Language count</h2> 
+<h2>Languages</h2> 
   
-  <div class="embed-responsive embed-responsive-4by3">
-    <iframe class="embed-responsive-item" src="https://query.wikidata.org/embed.html#%23defaultView%3ABubbleChart%0A%23%20Count%20of%20number%20of%20lexemes%20used%20for%20a%20specified%20lexical%20category%0A%23%20wrt.%20language%0ASELECT%0A%20%20%3Fcount%0A%20%20%3Flanguage%20%3FlanguageLabel%0AWHERE%20%7B%0A%20%20%7B%0A%20%20%20%20SELECT%20%28COUNT%28%2a%29%20AS%20%3Fcount%29%20%3Flanguage%20%7B%0A%20%20%20%20%20%20wd%3A{{ q }}%20%5Ewikibase%3AlexicalCategory%20%2F%20dct%3Alanguage%20%3Flanguage%20.%0A%20%20%20%20%7D%0A%20%20%20%20GROUP%20BY%20%3Flanguage%0A%20%20%7D%0A%20%20OPTIONAL%20%7B%0A%20%20%20%20%3Flanguage%20rdfs%3Alabel%20%3FlanguageLabel%20.%0A%20%20%20%20FILTER%20%28LANG%28%3FlanguageLabel%29%20%3D%20%27en%27%29%0A%20%20%7D%0A%7D%0AORDER%20BY%20DESC%28%3Fcount%29"></iframe>
-  </div>
+<table class="table table-hover" id="languages"></table>
 
-</div>
 
 
 <div class="lexical-categories-graph">
