--- a/ordia/app/templates/reference.html
+++ b/ordia/app/templates/reference.html
@@ -5,7 +5,23 @@
 {{super()}}
 
 <script type="text/javascript">
-    listOfUsesSparql = `
+    lexemesSparql = `
+SELECT 
+  DISTINCT ?lexeme ?lexemeLabel
+WHERE {
+  { ?lexeme wdt:P1343 | ^wdt:P6254 wd:{{ q }} . }
+  UNION
+  {
+    ?lexeme ?property ?statement . 
+    ?statement prov:wasDerivedFrom / pr:P248 wd:wd:{{ q }} .
+  }
+  
+  ?lexeme wikibase:lemma ?lexemeLabel .
+}
+`
+
+
+listOfUsesSparql = `
 SELECT 
   ?lexeme ?lexemeLabel
   ?form ?formLabel
@@ -32,8 +48,14 @@ WHERE {
   }
 }
 `
-  
+
+
   $(document).ready(function() {
+      sparqlToDataTable(lexemesSparql, "#lexemes",
+			options={
+			    'linkPrefixes': {
+				'lexeme': '../',
+			    }});
       sparqlToDataTable(listOfUsesSparql, "#list-of-uses",
 			options={
 			    'linkPrefixes': {
@@ -52,18 +74,27 @@ WHERE {
 <div class="reference-entry">
   
   <h1>Reference: {{ q }}</h1>
-  
+
+  <!-- a title="Back"
+     role="button"
+     class="btn btn-outline-dark btn-sm"
+     href="./">←</a -->
   <a title="View and edit reference on Wikidata"
      role="button"
      class="btn btn-outline-dark btn-sm"
-     href="https://www.wikidata.org/wiki/{{ q }}">Wikidata</a>
+     href="https://www.wikidata.org/wiki/{{ q }}">Wikidata 🔗</a>
   <a title="View reference in Scholia"
      role="button"
      class="btn btn-outline-dark btn-sm"
-     href="https://tools.wmflabs.org/scholia/work/{{ q }}">Scholia</a>
+     href="https://tools.wmflabs.org/scholia/work/{{ q }}">Scholia 🔗</a>
 
   <hr>
 
+  <h2>Lexemes</h2>
+
+  <table class="table table-hover" id="lexemes"></table>
+
+  
   <h2>Use</h2>
 
   <table class="table table-hover" id="list-of-uses"></table>
