Add Greenlandic and Toki Pona to text-to-lexemes

--- a/ordia/app/templates/text_to_lexemes.html
+++ b/ordia/app/templates/text_to_lexemes.html
@@ -98,7 +98,9 @@ ORDER BY ?word
  	    <option value="eu"{% if text_language == 'eu' %} selected="selected"{% endif %}>Euskara</option>
 	    <option value="fr"{% if text_language == 'fr' %} selected="selected"{% endif %}>Français</option>
 	    <option value="hi"{% if text_language == 'hi' %} selected="selected"{% endif %}>हिन्दी</option>
+	    <option value="kl"{% if text_language == 'kl' %} selected="selected"{% endif %}>kalaallisut</option>
 	    <option value="ku"{% if text_language == 'ku' %} selected="selected"{% endif %}>kurdî</option>
+	    <option value="mis-x-Q36846"{% if text_language == 'mis-x-Q36846' %} selected="selected"{% endif %}>Toki Pona</option>
 	    <option value="ml"{% if text_language == 'ml' %} selected="selected"{% endif %}>മലയാളം</option>
 	    <option value="pa"{% if text_language == 'pa' %} selected="selected"{% endif %}>ਪੰਜਾਬੀ</option>
 	    <option value="pl"{% if text_language == 'pl' %} selected="selected"{% endif %}>Polski</option>
