Add new examples to index page

--- a/ordia/app/templates/index.html
+++ b/ordia/app/templates/index.html
@@ -24,11 +24,33 @@
 		    <dd>
 			German lexeme.
 		    </dd>
+		    
 
-		    <dt><a href="L128-F3">Vovserne</a></dt>
+		    <dt><a href="L43318">krænkelsesparat</a></dt>
 		    <dd>
-			Danish form.
+			Danish neologism with indication of
+			probable first appearance in various news
+			sites, articles and books.  
 		    </dd>
+		    
+		    <dt><a href="L2310">rød</a></dt>
+		    <dd>
+			Danish adjective with primary meaning
+			being "<a href="Q3142">red</a>" and which
+			appears in many different compounds.
+		    </dd>
+		    
+		    <dt><a href="L53145">dobrý</a></dt>
+		    <dd>
+			Czech adjective with many (160+) different forms.
+		    </dd>
+
+		    <dt><a href="L189">вода</a></dt>
+		    <dd>
+			Russian noun with many (15+) different senses,
+			among others <a href="Q29053744">liquid water</a>.
+			
+				
 		</dl>
             </div>
 
