Add demonym translation for sense aspect
Now translate demonym in sense aspect through the P6271 (demonym for) property

--- a/ordia/app/templates/ls.html
+++ b/ordia/app/templates/ls.html
@@ -114,6 +114,8 @@ WHERE {
   { ?query_sense wdt:P5137 / ^wdt:P5137 ?sense . }
   UNION
   { ?query_sense (wdt:P5972 | ^wdt:P5972)+ ?sense . }
+  UNION
+  { ?query_sense (wdt:P6271 | ^wdt:P6271)+ ?sense . }
 
   # Do not show senses from the query language
   ?query_sense ^ontolex:sense / dct:language ?query_language .
