Fix and add in SPARQL for reference
A bug was present in the SPARQL for the lexeme panel in the reference aspect.
The query was extended to also show "attested in" references for lexemes and
forms.

--- a/ordia/app/templates/reference.html
+++ b/ordia/app/templates/reference.html
@@ -13,9 +13,13 @@ WHERE {
   UNION
   {
     ?lexeme ?property ?statement . 
-    ?statement prov:wasDerivedFrom / pr:P248 wd:wd:{{ q }} .
+    ?statement prov:wasDerivedFrom / pr:P248 wd:{{ q }} .
   }
-  
+  UNION
+  {
+    ?lexeme ontolex:lexicalForm? / wdt:P5323 wd:{{ q }} .
+  }
+    
   ?lexeme wikibase:lemma ?lexemeLabel .
 }
 `
