Fix #87: change external link emoji to arrow

--- a/ordia/app/templates/l.html
+++ b/ordia/app/templates/l.html
@@ -133,7 +133,7 @@ WHERE {
       OPTIONAL { ?value_statement pq:P577 ?date }
       BIND(COALESCE(
         CONCAT(STR(YEAR(?date)), "-", STR(MONTH(?date)), "-", STR(DAY(?date))),
-        "🔗") AS ?source)
+        "↗") AS ?source)
     }
   }
   UNION 
@@ -149,8 +149,8 @@ WHERE {
       ?value_statement prov:wasDerivedFrom / pr:P854 ?sourceUrl .
       OPTIONAL { ?value_statement pq:P577 ?date }
       BIND(COALESCE(
-	  CONCAT(STR(YEAR(?date)), "-", STR(MONTH(?date)), "-", STR(DAY(?date)), " 🔗"),
-        "🔗") AS ?source)
+	  CONCAT(STR(YEAR(?date)), "-", STR(MONTH(?date)), "-", STR(DAY(?date)), " ↗"),
+        "↗") AS ?source)
     }
     OPTIONAL {
       ?value wdt:P577 ?date . 
@@ -289,7 +289,7 @@ WHERE {
 	 <a title="View and edit lexeme in Wikidata"
 	    role="button"
 	    class="btn btn-outline-dark btn-sm"
-	    href="https://www.wikidata.org/wiki/Lexeme:{{ l }}">Wikidata 🔗</a>
+	    href="https://www.wikidata.org/wiki/Lexeme:{{ l }}">Wikidata ↗</a>
      </p>
      
      <table class="table table-hover" id="lexeme"></table>
