--- a/ordia/app/templates/language.html
+++ b/ordia/app/templates/language.html
@@ -109,15 +109,15 @@ LIMIT 200
   <a title="View and edit item in Wikidata"
      role="button"
      class="btn btn-outline-dark btn-sm"
-     href="https://www.wikidata.org/wiki/{{ q }}">Wikidata 🔗</a>
+     href="https://www.wikidata.org/wiki/{{ q }}">Wikidata ↗</a>
   <a title="View item in Reasonator"
      role="button"
      class="btn btn-outline-dark btn-sm"
-     href="https://tools.wmflabs.org/reasonator/?&q={{ q }}">Reasonator 🔗</a>
+     href="https://tools.wmflabs.org/reasonator/?&q={{ q }}">Reasonator ↗</a>
   <a title="View item as a Scholia topic"
      role="button"
      class="btn btn-outline-dark btn-sm"
-     href="https://tools.wmflabs.org/scholia/topic/{{ q }}">Scholia 🔗</a>
+     href="https://tools.wmflabs.org/scholia/topic/{{ q }}">Scholia ↗</a>
 
 
   <h2>Lexemes</h2>
