--- a/ordia/app/templates/lexical_category_language.html
+++ b/ordia/app/templates/lexical_category_language.html
@@ -40,6 +40,7 @@ LIMIT 10000
 
 <h1>Lexical category: {{ q1 }}; language: {{ q2 }}</h1>
 
+<p>
   <a title="Back"
      role="button"
      class="btn btn-outline-dark btn-sm"
@@ -47,11 +48,12 @@ LIMIT 10000
   <a title="View and edit item for lexical cateogry on Wikidata"
      role="button"
      class="btn btn-outline-dark btn-sm"
-     href="https://www.wikidata.org/wiki/{{ q1 }}">Wikidata for lexical category 🔗</a>
+     href="https://www.wikidata.org/wiki/{{ q1 }}">Wikidata for lexical category ↗</a>
   <a title="View item for lexical category in Sholia"
      role="button"
      class="btn btn-outline-dark btn-sm"
-     href="https://tools.wmflabs.org/scholia/topic/{{ q1 }}">Scholia for lexical category 🔗</a>
+     href="https://tools.wmflabs.org/scholia/topic/{{ q1 }}">Scholia for lexical category ↗</a>
+</p>
 
 <hr/>
 
