--- a/ordia/app/templates/grammatical_feature.html
+++ b/ordia/app/templates/grammatical_feature.html
@@ -46,15 +46,21 @@ ORDER BY ?formLabel
 
 <h1>Grammatical Feature: {{ q }}</h1>
 
+<p>
+  <a title="Back"
+     role="button"
+     class="btn btn-outline-dark btn-sm"
+     href="./">←</a>
   <a title="View and edit reference on Wikidata"
      role="button"
      class="btn btn-outline-dark btn-sm"
-     href="https://www.wikidata.org/wiki/{{ q }}">Wikidata</a>
+     href="https://www.wikidata.org/wiki/{{ q }}">Wikidata ↗</a>
   <a title="View reference in Scholia"
      role="button"
      class="btn btn-outline-dark btn-sm"
-     href="https://tools.wmflabs.org/scholia/work/{{ q }}">Scholia</a>
-
+     href="https://tools.wmflabs.org/scholia/work/{{ q }}">Scholia ↗</a>
+</p>
+  
 <hr/>
 
 <table class="table table-hover" id="forms"></table>
