--- a/ordia/app/templates/lexical_category.html
+++ b/ordia/app/templates/lexical_category.html
@@ -76,11 +76,11 @@ ORDER BY DESC(?count)
   <a title="View and edit item for lexical cateogry on Wikidata"
      role="button"
      class="btn btn-outline-dark btn-sm"
-     href="https://www.wikidata.org/wiki/{{ q }}">Wikidata 🔗</a>
+     href="https://www.wikidata.org/wiki/{{ q }}">Wikidata ↗</a>
   <a title="View item for lexical category in Sholia"
      role="button"
      class="btn btn-outline-dark btn-sm"
-     href="https://tools.wmflabs.org/scholia/topic/{{ q }}">Scholia 🔗</a>
+     href="https://tools.wmflabs.org/scholia/topic/{{ q }}">Scholia ↗</a>
 
 <hr/>
 
