--- a/ordia/app/templates/property.html
+++ b/ordia/app/templates/property.html
@@ -127,11 +127,11 @@ LIMIT 10000
   <a title="View and edit property on Wikidata"
      role="button"
      class="btn btn-outline-dark btn-sm"
-     href="https://www.wikidata.org/wiki/Property:{{ p }}">Wikidata 🔗</a>
+     href="https://www.wikidata.org/wiki/Property:{{ p }}">Wikidata ↗</a>
   <a title="View property in Scholia"
      role="button"
      class="btn btn-outline-dark btn-sm"
-     href="https://tools.wmflabs.org/scholia/{{ p }}">Scholia 🔗</a>
+     href="https://tools.wmflabs.org/scholia/{{ p }}">Scholia ↗</a>
 
   <hr/>
 
