--- a/ordia/app/templates/q.html
+++ b/ordia/app/templates/q.html
@@ -83,23 +83,28 @@ GROUP BY
  
   <hr/>
 
-  <a title="View and edit the item in Wikidata"
-     role="button"
-     class="btn btn-outline-dark btn-sm"
-     href="https://www.wikidata.org/wiki/{{ q }}">Wikidata</a>
-  <a title="View the item in the SQID class and property browser"
-     role="button"
-     class="btn btn-outline-dark btn-sm"
-     href="https://tools.wmflabs.org/sqid/#/view?id={{ q }}">SQID</a>
-  <a title="Magnus Manske's Reasonator with pretty display of the Wikidata item"
-     role="button"
-     class="btn btn-outline-dark btn-sm"
-     href="https://tools.wmflabs.org/reasonator/?q={{ q }}">Reasonator</a>
-  <a title="View the Wikidata item with Scholia - Scholarly profiles from Wikidata data"
-     role="button"
-     class="btn btn-outline-dark btn-sm"
-     href="https://tools.wmflabs.org/scholia/topic/{{ q }}">Scholia</a>
-
+  <p>
+    <a title="Back"
+       role="button"
+       class="btn btn-outline-dark btn-sm"
+       href="./">←</a>
+    <a title="View and edit the item in Wikidata"
+       role="button"
+       class="btn btn-outline-dark btn-sm"
+       href="https://www.wikidata.org/wiki/{{ q }}">Wikidata ↗</a>
+    <a title="View the item in the SQID class and property browser"
+       role="button"
+       class="btn btn-outline-dark btn-sm"
+       href="https://tools.wmflabs.org/sqid/#/view?id={{ q }}">SQID ↗</a>
+    <a title="Magnus Manske's Reasonator with pretty display of the Wikidata item"
+       role="button"
+       class="btn btn-outline-dark btn-sm"
+       href="https://tools.wmflabs.org/reasonator/?q={{ q }}">Reasonator ↗</a>
+    <a title="View the Wikidata item with Scholia - Scholarly profiles from Wikidata data"
+       role="button"
+       class="btn btn-outline-dark btn-sm"
+       href="https://tools.wmflabs.org/scholia/topic/{{ q }}">Scholia ↗</a>
+  </p>
   
     <h2>Lexemes</h2>
 
