--- a/ordia/app/templates/statistics.html
+++ b/ordia/app/templates/statistics.html
@@ -78,6 +78,13 @@ SELECT
   ?query
 WHERE {
   {
+    { SELECT (COUNT(*) AS ?count) { [] wdt:P6838 [] . } }
+    wd:P6838 rdfs:label ?description .
+    FILTER (LANG(?description) = 'en')
+    BIND("[] wdt:P6838 []" AS ?query)
+  }
+  UNION
+  {
     { SELECT (COUNT(*) AS ?count) { [] wdt:P5274 [] . } }
     wd:P5274 rdfs:label ?description .
     FILTER (LANG(?description) = 'en')
