--- a/ordia/app/templates/statistics.html
+++ b/ordia/app/templates/statistics.html
@@ -8,7 +8,7 @@
 
 SELECT
   ?count
-  ?description 
+  ?description
   ?query
 WHERE {
   {
@@ -74,13 +74,14 @@ ORDER BY DESC(?count)
   identifierStatisticsSparql = `
 SELECT
   ?count
-  ?description 
+  ?description ?descriptionUrl
   ?query
 WHERE {
   {
     { SELECT (COUNT(*) AS ?count) { [] wdt:P6838 [] . } }
     wd:P6838 rdfs:label ?description .
     FILTER (LANG(?description) = 'en')
+    BIND("../property/P6838" AS ?descriptionUrl)
     BIND("[] wdt:P6838 []" AS ?query)
   }
   UNION
@@ -88,6 +89,7 @@ WHERE {
     { SELECT (COUNT(*) AS ?count) { [] wdt:P5274 [] . } }
     wd:P5274 rdfs:label ?description .
     FILTER (LANG(?description) = 'en')
+    BIND("../property/P5274" AS ?descriptionUrl)
     BIND("[] wdt:P5274 []" AS ?query)
   }
   UNION
@@ -95,6 +97,7 @@ WHERE {
     { SELECT (COUNT(*) AS ?count) { [] wdt:P5275 [] . } }
     wd:P5275 rdfs:label ?description .
     FILTER (LANG(?description) = 'en')
+    BIND("../property/P5275" AS ?descriptionUrl)
     BIND("[] wdt:P5275 []" AS ?query)
   }
   UNION
@@ -102,6 +105,7 @@ WHERE {
     { SELECT (COUNT(*) AS ?count) { [] wdt:P5497 [] . } }
     wd:P5497 rdfs:label ?description .
     FILTER (LANG(?description) = 'en')
+    BIND("../property/P5497" AS ?descriptionUrl)
     BIND("[] wdt:P5497 []" AS ?query)
   }
   UNION
@@ -109,6 +113,7 @@ WHERE {
     { SELECT (COUNT(*) AS ?count) { [] wdt:P5533 [] . } }
     wd:P5533 rdfs:label ?description .
     FILTER (LANG(?description) = 'en')
+    BIND("../property/P5533" AS ?descriptionUrl)
     BIND("[] wdt:P5533 []" AS ?query)
   }
   UNION
@@ -116,6 +121,7 @@ WHERE {
     { SELECT (COUNT(*) AS ?count) { [] wdt:P5627 [] . } }
     wd:P5627 rdfs:label ?description .
     FILTER (LANG(?description) = 'en')
+    BIND("../property/P5627" AS ?descriptionUrl)
     BIND("[] wdt:P5627 []" AS ?query)
   }
   UNION
@@ -123,6 +129,7 @@ WHERE {
     { SELECT (COUNT(*) AS ?count) { [] wdt:P5720 [] . } }
     wd:P5720 rdfs:label ?description .
     FILTER (LANG(?description) = 'en')
+    BIND("../property/P5720" AS ?descriptionUrl)
     BIND("[] wdt:P5720 []" AS ?query)
   }
   UNION
@@ -130,6 +137,7 @@ WHERE {
     { SELECT (COUNT(*) AS ?count) { [] wdt:P5793 [] . } }
     wd:P5793 rdfs:label ?description .
     FILTER (LANG(?description) = 'en')
+    BIND("../property/P5793" AS ?descriptionUrl)
     BIND("[] wdt:P5793 []" AS ?query)
   }
   UNION
@@ -137,6 +145,7 @@ WHERE {
     { SELECT (COUNT(*) AS ?count) { [] wdt:P5844 [] . } }
     wd:P5844 rdfs:label ?description .
     FILTER (LANG(?description) = 'en')
+    BIND("../property/P5844" AS ?descriptionUrl)
     BIND("[] wdt:P5844 []" AS ?query)
   }
   UNION
@@ -144,6 +153,7 @@ WHERE {
     { SELECT (COUNT(*) AS ?count) { [] wdt:P5876 [] . } }
     wd:P5876 rdfs:label ?description .
     FILTER (LANG(?description) = 'en')
+    BIND("../property/P5876" AS ?descriptionUrl)
     BIND("[] wdt:P5876 []" AS ?query)
   }
   UNION
@@ -151,6 +161,7 @@ WHERE {
     { SELECT (COUNT(*) AS ?count) { [] wdt:P5877 [] . } }
     wd:P5877 rdfs:label ?description .
     FILTER (LANG(?description) = 'en')
+    BIND("../property/P5877" AS ?descriptionUrl)
     BIND("[] wdt:P5877 []" AS ?query)
   }
   UNION
@@ -158,6 +169,7 @@ WHERE {
     { SELECT (COUNT(*) AS ?count) { [] wdt:P5902 [] . } }
     wd:P5902 rdfs:label ?description .
     FILTER (LANG(?description) = 'en')
+    BIND("../property/P5902" AS ?descriptionUrl)
     BIND("[] wdt:P5902 []" AS ?query)
   }
   UNION
@@ -165,6 +177,7 @@ WHERE {
     { SELECT (COUNT(*) AS ?count) { [] wdt:P5903 [] . } }
     wd:P5903 rdfs:label ?description .
     FILTER (LANG(?description) = 'en')
+    BIND("../property/P5903" AS ?descriptionUrl)
     BIND("[] wdt:P5903 []" AS ?query)
   }
   UNION
@@ -172,6 +185,7 @@ WHERE {
     { SELECT (COUNT(*) AS ?count) { [] wdt:P5912 [] . } }
     wd:P5912 rdfs:label ?description .
     FILTER (LANG(?description) = 'en')
+    BIND("../property/P5912" AS ?descriptionUrl)
     BIND("[] wdt:P5912 []" AS ?query)
   }
   UNION
@@ -179,6 +193,7 @@ WHERE {
     { SELECT (COUNT(*) AS ?count) { [] wdt:P5928 [] . } }
     wd:P5928 rdfs:label ?description .
     FILTER (LANG(?description) = 'en')
+    BIND("../property/P5928" AS ?descriptionUrl)
     BIND("[] wdt:P5928 []" AS ?query)
   }
   UNION
@@ -186,6 +201,7 @@ WHERE {
     { SELECT (COUNT(*) AS ?count) { [] wdt:P5937 [] . } }
     wd:P5937 rdfs:label ?description .
     FILTER (LANG(?description) = 'en')
+    BIND("../property/P5937" AS ?descriptionUrl)
     BIND("[] wdt:P5937 []" AS ?query)
   }
   UNION
@@ -193,6 +209,7 @@ WHERE {
     { SELECT (COUNT(*) AS ?count) { [] wdt:P5938 [] . } }
     wd:P5938 rdfs:label ?description .
     FILTER (LANG(?description) = 'en')
+    BIND("../property/P5938" AS ?descriptionUrl)
     BIND("[] wdt:P5938 []" AS ?query)
   }
   UNION
@@ -200,6 +217,7 @@ WHERE {
     { SELECT (COUNT(*) AS ?count) { [] wdt:P5939 [] . } }
     wd:P5939 rdfs:label ?description .
     FILTER (LANG(?description) = 'en')
+    BIND("../property/P5939" AS ?descriptionUrl)
     BIND("[] wdt:P5939 []" AS ?query)
   }
   UNION
@@ -207,6 +225,7 @@ WHERE {
     { SELECT (COUNT(*) AS ?count) { [] wdt:P6140 [] } }
     wd:P6140 rdfs:label ?description .
     FILTER (LANG(?description) = 'en')
+    BIND("../property/P6140" AS ?descriptionUrl)
     BIND("[] wdt:P6140 []" AS ?query)
   }
   UNION
@@ -214,6 +233,7 @@ WHERE {
     { SELECT (COUNT(*) AS ?count) { [] wdt:P6168 [] } }
     wd:P6168 rdfs:label ?description .
     FILTER (LANG(?description) = 'en')
+    BIND("../property/P6168" AS ?descriptionUrl)
     BIND("[] wdt:P6168 []" AS ?query)
   }
   
