--- a/ordia/app/templates/ls.html
+++ b/ordia/app/templates/ls.html
@@ -37,6 +37,18 @@ WHERE {
   }  
   UNION
   {
+    BIND(4 AS ?order)
+    BIND("Gloss" AS ?description)
+    ?sense skos:definition ?value_ . 
+    BIND(LANG(?value_) AS ?language_code)
+    BIND(CONCAT(?value_, " (", LANG(?value_), ")") AS ?value)
+    BIND(CONCAT("./text-to-lexemes?text-language=",
+      ENCODE_FOR_URI(?language_code),
+        "&text=",
+   	ENCODE_FOR_URI(?value_)) AS ?valueUrl)
+  }  
+  UNION
+  {
     BIND(5 AS ?order)
     BIND("Usage style" AS ?description)
     ?sense wdt:P6191 ?value .
@@ -103,7 +115,6 @@ WHERE {
       ENCODE_FOR_URI(?language_code),
         "&text=",
    	ENCODE_FOR_URI(?value)) AS ?valueUrl)
-
   }  
 }
 ORDER BY ?order
