Fix new Toolforge URLs #105

--- a/ordia/app/templates/base.html
+++ b/ordia/app/templates/base.html
@@ -127,7 +127,7 @@
     Code from
     <a href="https://github.com/fnielsen/ordia">GitHub repository</a>
     |
-    Hosted on   <a href="https://tools.wmflabs.org/">Wikimedia Toolforge</a>,
+    Hosted on   <a href="https://wikitech.wikimedia.org/wiki/Portal:Toolforge">Wikimedia Toolforge</a>,
     a <a href="https://wikimediafoundation.org">Wikimedia Foundation</a> service
     |
     License for content: CC0 for data, CC-BY-SA for text and media
