--- a/ordia/app/templates/grammatical_feature.html
+++ b/ordia/app/templates/grammatical_feature.html
@@ -58,7 +58,7 @@ ORDER BY ?formLabel
   <a title="View reference in Scholia"
      role="button"
      class="btn btn-outline-dark btn-sm"
-     href="https://tools.wmflabs.org/scholia/work/{{ q }}">Scholia ↗</a>
+     href="https://scholia.toolforge.org/work/{{ q }}">Scholia ↗</a>
 </p>
   
 <hr/>
