--- a/ordia/app/templates/language.html
+++ b/ordia/app/templates/language.html
@@ -113,11 +113,11 @@ LIMIT 200
   <a title="View item in Reasonator"
      role="button"
      class="btn btn-outline-dark btn-sm"
-     href="https://tools.wmflabs.org/reasonator/?&q={{ q }}">Reasonator ↗</a>
+     href="https://reasonator.toolforge.org/?&q={{ q }}">Reasonator ↗</a>
   <a title="View item as a Scholia topic"
      role="button"
      class="btn btn-outline-dark btn-sm"
-     href="https://tools.wmflabs.org/scholia/topic/{{ q }}">Scholia ↗</a>
+     href="https://scholia.toolforge.org/topic/{{ q }}">Scholia ↗</a>
 
 
   <h2>Lexemes</h2>
