--- a/ordia/app/templates/lexical_category_language.html
+++ b/ordia/app/templates/lexical_category_language.html
@@ -52,7 +52,7 @@ LIMIT 10000
   <a title="View item for lexical category in Sholia"
      role="button"
      class="btn btn-outline-dark btn-sm"
-     href="https://tools.wmflabs.org/scholia/topic/{{ q1 }}">Scholia for lexical category ↗</a>
+     href="https://scholia.toolforge.org/topic/{{ q1 }}">Scholia for lexical category ↗</a>
 </p>
 
 <hr/>
