--- a/ordia/app/templates/property_value.html
+++ b/ordia/app/templates/property_value.html
@@ -97,11 +97,11 @@ LIMIT 1000
   <a title="View property in Scholia"
      role="button"
      class="btn btn-outline-dark btn-sm"
-     href="https://tools.wmflabs.org/scholia/{{ p }}">Scholia for property</a>
+     href="https://scholia.toolforge.org/{{ p }}">Scholia for property</a>
   <a title="View item in Scholia"
      role="button"
      class="btn btn-outline-dark btn-sm"
-     href="https://tools.wmflabs.org/scholia/topic/{{ q }}">Scholia for value</a>
+     href="https://scholia.toolforge.org/topic/{{ q }}">Scholia for value</a>
 
   <hr/>
 
