--- a/ordia/app/templates/property.html
+++ b/ordia/app/templates/property.html
@@ -131,7 +131,7 @@ LIMIT 10000
   <a title="View property in Scholia"
      role="button"
      class="btn btn-outline-dark btn-sm"
-     href="https://tools.wmflabs.org/scholia/{{ p }}">Scholia ↗</a>
+     href="https://scholia.toolforge.org/{{ p }}">Scholia ↗</a>
 
   <hr/>
 
