--- a/ordia/app/templates/q.html
+++ b/ordia/app/templates/q.html
@@ -102,15 +102,15 @@ GROUP BY
     <a title="View the item in the SQID class and property browser"
        role="button"
        class="btn btn-outline-dark btn-sm"
-       href="https://tools.wmflabs.org/sqid/#/view?id={{ q }}">SQID ↗</a>
+       href="https://sqid.toolforge.org/#/view?id={{ q }}">SQID ↗</a>
     <a title="Magnus Manske's Reasonator with pretty display of the Wikidata item"
        role="button"
        class="btn btn-outline-dark btn-sm"
-       href="https://tools.wmflabs.org/reasonator/?q={{ q }}">Reasonator ↗</a>
+       href="https://reasonator.toolforge.org/?q={{ q }}">Reasonator ↗</a>
     <a title="View the Wikidata item with Scholia - Scholarly profiles from Wikidata data"
        role="button"
        class="btn btn-outline-dark btn-sm"
-       href="https://tools.wmflabs.org/scholia/topic/{{ q }}">Scholia ↗</a>
+       href="https://scholia.toolforge.org/topic/{{ q }}">Scholia ↗</a>
   </p>
   
     <h2>Lexemes</h2>
