--- a/ordia/app/templates/reference.html
+++ b/ordia/app/templates/reference.html
@@ -91,7 +91,7 @@ WHERE {
     <a title="View reference in Scholia"
        role="button"
        class="btn btn-outline-dark btn-sm"
-       href="https://tools.wmflabs.org/scholia/work/{{ q }}">Scholia ↗</a>
+       href="https://scholia.toolforge.org/work/{{ q }}">Scholia ↗</a>
   </p>
     
   <hr>
