--- a/ordia/app/templates/text_to_lexemes.html
+++ b/ordia/app/templates/text_to_lexemes.html
@@ -119,8 +119,10 @@ ORDER BY ?word
 	  <option value="ml"{% if text_language == 'ml' %} selected="selected"{% endif %}>മലയാളം - ml - Malayalam</option>
 	  <option value="mn"{% if text_language == 'mn' %} selected="selected"{% endif %}>Монгол - mn - Mongolian</option>
 	  <option value="mr"{% if text_language == 'mr' %} selected="selected"{% endif %}>मराठी - mr - Marathi</option>
+	  <option value="nb"{% if text_language == 'nb' %} selected="selected"{% endif %}>norsk bokmål - nb - Norwegian Bokmål</option>
 	  <option value="ne"{% if text_language == 'ne' %} selected="selected"{% endif %}>नेपाली - ne - Nepali</option>
 	  <option value="nl"{% if text_language == 'nl' %} selected="selected"{% endif %}>Nederlands - nl - Dutch</option>
+	  <option value="nn"{% if text_language == 'nn' %} selected="selected"{% endif %}>norsk nynorsk - nn - Norwegian Nynorsk</option>
 	  <option value="nv"{% if text_language == 'nv' %} selected="selected"{% endif %}>Diné bizaad - nv - Navajo</option>
 	  <option value="or"{% if text_language == 'or' %} selected="selected"{% endif %}>ଓଡ଼ିଆ - or - Ordia</option>
 	  <option value="pa"{% if text_language == 'pa' %} selected="selected"{% endif %}>ਪੰਜਾਬੀ - pa - Eastern Punjabi</option>
